--- a/src/main/resources/templates/admin/disciplines.html
+++ b/src/main/resources/templates/admin/disciplines.html
@@ -14,7 +14,7 @@
 
 			<div class="card">
 				<div class="card-body">
-					<h4 class="card-title">Nova Disciplina</h4>
+					<h4 class="card-title text-center">Cadastrar Disciplina</h4>
 
 					<form action="#" method="post" th:object="${discipline}">
 						<div class="mb-3">
@@ -77,7 +77,7 @@
 								th:errors="*{objective}">Objetivo inválido</span>
 						</div>
 
-						<button type="submit" class="btn btn-danger form-control">Criar</button>
+						<button type="submit" class="btn btn-danger form-control">Cadastrar</button>
 					</form>
 				</div>
 			</div>
