--- a/src/main/resources/templates/admin/topics.html
+++ b/src/main/resources/templates/admin/topics.html
@@ -5,39 +5,49 @@
 <meta charset="utf-8">
 </head>
 <body>
-	<div class="alert alert-success mt-3" th:if="${!#strings.isEmpty(message)}" th:text="${message}" role="alert">
-		<button type="button" class="close" data-dismiss="alert">&times;</button>
+	<div class="container mt-3">
+		<div class="alert alert-success alert-dismissible fade show" role="alert"
+			th:if="${!#strings.isEmpty(message)}">
+			<span th:text=${message}></span>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
 	</div>
 
-	<h3 class="fw-bolder text-center mt-3">Gerenciar Tópicos</h3>
+	<div class="card mt-3 border border-1 border-danger shadow">
+		<div class="card-body">
+			<h2 class="card-title text-center fw-bolder">Gerenciar Tópicos</h2>
+			<hr>
 
-	<table id="table" class="table table-sm table-striped table-bordered table-hover">
-		<thead class="thead-dark">
-			<tr>
-				<th>ID</th>
-				<th>Nome</th>
-				<th>Disciplina</th>
-				<th>Curso</th>
-				<th>Obrigatório</th>
-				<th>Data de Envio</th>
-				<th>Status</th>
-				<th>Ação</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="topic : ${topics}" th:data-id="${topic.id}">
-				<td class="align-middle" th:text="${topic.id}"></td>
-				<td class="align-middle" th:text="${topic.name}"></td>
-				<td class="align-middle" th:text="${topic.discipline.name}"></td>
-				<td class="align-middle" th:text="${topic.discipline.course.name}"></td>
-				<td class="align-middle" th:text="${topic.required}"></td>
-				<td class="align-middle" th:text="${#dates.format(topic.creationDate, 'dd/MM/yyyy')}"></td>
-				<td class="align-middle" th:text="${topic.status.displayName}"></td>
-				<td><a class="btn btn-outline-dark button-sm" href="#"
-						th:href="@{/admin/topics/{id}(id=${topic.id})}">Analisar</a></td>
-			</tr>
-		</tbody>
-	</table>
+			<table id="table" class="table table-hover cell-border compact order-column">
+				<thead class="thead-dark text-center">
+					<tr>
+						<th>ID</th>
+						<th>Nome</th>
+						<th>Disciplina</th>
+						<th>Curso</th>
+						<th>Obrigatório</th>
+						<th>Data de Envio</th>
+						<th>Status</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="topic : ${topics}" th:data-id="${topic.id}">
+						<td class="align-middle fw-bold" th:text="${topic.id}"></td>
+						<td class="align-middle fw-bold" th:text="${topic.name}"></td>
+						<td class="align-middle" th:text="${topic.discipline.name}"></td>
+						<td class="align-middle text-center" th:text="${topic.discipline.course.code}"></td>
+						<td class="align-middle text-center" th:text="${topic.required} ? 'Sim' : 'Não'"></td>
+						<td class="align-middle text-center" th:text="${#dates.format(topic.creationDate, 'dd/MM/yyyy')}"></td>
+						<td class="align-middle text-center fw-bold" th:text="${topic.status.displayName}"></td>
+						<td class="text-center"><a class="btn btn-outline-dark button-sm" href="#"
+								th:href="@{/admin/topics/{id}(id=${topic.id})}">Ver mais</a></td>
+					</tr>
+				</tbody>
+			</table>
+
+		</div>
+	</div>
 
 	<script type="text/javascript">
 		$('#table')
