--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-	th:fragment="base (title, body, links, scripts, styles)">
+<html xmlns:th="https://www.thymeleaf.org" th:fragment="base (title, body, links, scripts, styles)">
 <head th:replace="~{fragments/head :: head(${title}, ${links}, ${scripts}, ${styles})}">
 <meta charset="utf-8">
 </head>
