--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -268,7 +268,7 @@
 		});
 		
 		$('#newQuestionForm').submit(function(event) {
-			$('#description').val(newQuestionEditor.container.innerHTML);
+			$('#description').val(newQuestionEditor.root.innerHTML);
 		});
 		
 	</script>
