--- a/src/main/resources/templates/disciplines/course-details.html
+++ b/src/main/resources/templates/disciplines/course-details.html
@@ -6,61 +6,69 @@
 <link rel="stylesheet" type="text/css" th:href="@{/css/btn-card.css}">
 </head>
 <body>
-	<div class="card mb-3">
-		<div class="row g-0">
-			<div class="col-md-4">
-				<img src="http://www.fatecsp.br/img/ti.jpg" style="max-width: 400px; min-height: 250px">
-			</div>
-			<div class="col-md-8">
-				<div class="card-body">
-					<h4 class="card-title fw-bolder" th:text="${course.name}">Card title</h4>
-					<p class="card-text" th:text="${course.description}">This is a wider card with supporting text below
-						as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+	<div class="row ">
+		<div class="card m-0 p-0 bg-dark text-white">
+			<div class="row">
+				<div class="col-md-3">
+					<img th:src="${course.imageUrl}" class="img-fluid" >
+				</div>
+				<div class="col-md-9">
+					<div class="card-body">
+						<h3 class="card-title fw-bolder" th:text="${course.name}">Card title</h3>
+						<p class="card-text" th:text="${course.description}">This is a wider card with supporting text below
+							as a natural lead-in to additional content. This content is a little bit longer.</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="mt-3">
-		<div class="row justify-content-md-center">
-			<div class="col-md-8">
-				<label for="inputFilter">Pesquise por</label>
-				<input id="inputFilter" class="form-control" type="text" placeholder="Disciplina, Assunto, Palavra-chave">
+	<div class="container">
+		<div class="mt-3">
+			<div class="row justify-content-md-center my-5">
+				<div class="col-md-8">
+					<label for="inputFilter">Pesquise por</label>
+					<input id="inputFilter" class="form-control" type="text" placeholder="Disciplina, Assunto, Palavra-chave">
+				</div>
+				<div class="col-6 col-md-4">
+					<label for="semesterSelect">Semestre</label>
+					<select id="semesterSelect" class="form-select">
+						<option value="0">Todos</option>
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+						<option value="6">6</option>
+					</select>
+				</div>
 			</div>
-			<div class="col-6 col-md-4">
-				<label for="semesterSelect">Semestre</label>
-				<select id="semesterSelect" class="form-select">
-					<option value="0">Todos</option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
-					<option value="6">6</option>
-				</select>
-			</div>
-		</div>
 
-		<hr>
-
-		<!-- Disciplines -->
-		<div id="disciplinesContainer" class="row row-cols-1 row-cols-md-3 g-4">
-			<div class="col" th:each="discipline : ${disciplines}" th:data-semester="${discipline.semester}">
-				<div class="card btn-card h-100 shadow-lg" th:onclick="'showDiscipline(\'' + ${discipline.id} + '\');'">
-					<h5 class="card-header btn-card-header" th:text="${discipline.name}">Estrutura de Dados</h5>
-					<div class="card-body">
-						<p class="card-text truncate" th:text="${discipline.description}">This is a wider card with
-							supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					</div>
-					<div class="card-footer">
-						<div th:with="progress=${discipline.user.progress}">
-							<div class="progress text-center" style="height: 10px;">
-								<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
-									aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
-									th:style="'width: ' + ${progress} + '%'"
-									th:classappend="${progress} == 100 ? 'bg-green' : 'bg-primary'"></div>
+	
+			<!-- Disciplines -->
+			<div id="disciplinesContainer" class="row row-cols-1 row-cols-md-3 g-4">
+				<div class="col" th:each="discipline : ${disciplines}" th:data-semester="${discipline.semester}">
+					<div class="card btn-card h-100 shadow" th:onclick="'showDiscipline(\'' + ${discipline.id} + '\');'">
+						<h5 class="card-header btn-card-header" th:text="${discipline.name}">Estrutura de Dados</h5>
+						<div class="card-body ">
+							<p class="card-text truncate" th:text="${discipline.description}">This is a wider card with
+								supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+							<div class="d-flex justify-content-end ">
+								<p class="mb-0 pb-0 text-secondary" th:text="'Semestre '+ ${discipline.semester}">Semestre: x</p>
+								<span class="ms-3 text-primary"><i class="fa fa-thumbs-o-up"> 0</i></span>
 							</div>
-							<small class="text-muted" th:text="${progress} > 0 ? ${progress} + '% concluído' : 'Começar agora'"></small>
+						</div>
+						<div class="card-footer">
+							<div th:with="progress=${discipline.user.progress}">
+								<div class="progress text-center" style="height: 10px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
+										aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+										th:style="'width: ' + ${progress} + '%'"
+										th:classappend="${progress} == 100 ? 'bg-green' : 'bg-dark'"></div>
+								</div>
+								<small class="text-muted" th:text="${progress} > 0 ? ${progress} + '% concluído' : 'Começar agora'"></small>
+							</div>
 						</div>
 					</div>
 				</div>
