--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -7,87 +7,194 @@
 #editor-container {
 	height: 350px;
 }
+
+.active {
+	color: #dc3545 !important;
+}
+
+.list-card-item {
+	cursor: pointer;
+}
+
+.list-card-item:hover {
+	transform: scale(1.010);
+}
+
 </style>
 </head>
 <body>
 	<div class="row">
-		<div class="p-3 mb-5 bg-dark text-white">
+		<div class="p-3 bg-dark text-white">
 			<div class="card-body">
-				<h2 class="card-title text-center fw-bolder" th:text="${discipline.code} + ' - ' +${discipline.name}"></h2>
+				<h3 class="card-title text-center fw-bolder" th:text="${discipline.code} + ' - ' +${discipline.name}"></h3>
 
-				<div class="mb-2">
-					<b>Ementa:</b>
+				<div class="col-10 offset-1 mb-3">
+					<h5 class="d-inline">Ementa:</h5>
 					<span th:text="${discipline.description}"></span>
 				</div>
 
-				<div class="mb-2">
-					<b>Objetivo:</b>
+				<div class="col-10 offset-1 mb-3">
+					<h5 class="d-inline">Objetivo:</h5>
 					<span th:text="${discipline.objective}"></span>
 				</div>
 
 				<div class="d-flex justify-content-end">
-					<button id="like" type="button" class="rounded-start"
-						th:classappend="${discipline.user.liked}? 'btn-danger' : 'btn-secondary'"
-						th:data-liked="${discipline.user.liked}">
-						<span id="likeButtonText" th:text="${discipline.user.liked} ? 'Descurtir' : 'Curtir'"></span>
-						<i class="fa fa-thumbs-up"></i>
-					</button>
-					<br>
-					<span id="totalLikes" class="border border-2 border-start-0 border-danger p-2 rounded-end me-3"
+					<div class="btn-group rounded-start" role="group" aria-label="Like toggle button">
+						<input type="checkbox" class="btn-check" id="likeButton" autocomplete="off"
+							th:checked="${discipline.user.liked}">
+						<label id="likingStatus" class="btn btn-outline-primary p-2" for="likeButton">
+							Curtir <i class="fa fa-thumbs-up"></i>
+						</label>
+					</div>
+					<span id="totalLikes"
+						class="fw-bolder text-primary border border-1 border-start-0 border-primary p-2 rounded-end"
+						th:classappend="${discipline.user.liked} ? 'bg-white' : 'bg-dark'"
 						th:text="${discipline.likes}"></span>
 
-					<div class="text-center">
-						<a href="#newTopicContainer" id="contribute" class="btn btn-warning">Contribuir</a>
-					</div>
 				</div>
 			</div>
 
 			<div class="progress text-center" style="height: 25px;" th:with="progress=${discipline.user.progress}">
 				<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
 					aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
-					th:style="'width: ' + ${progress} + '%'" th:classappend="${progress} == 100 ? 'bg-green' : 'bg-primary'"
+					th:style="'width: ' + ${progress} + '%'" th:classappend="${progress} == 100 ? 'bg-green' : 'bg-danger'"
 					th:text="${progress} > 0 ? ${progress} + '% Estudado'">55% estudado</div>
 			</div>
 		</div>
 	</div>
 
 	<div class="container">
-		<div class="alert alert-success alert-dismissible fade show" role="alert"
+	
+		<div class="alert alert-success alert-dismissible fade show my-5" role="alert"
 			th:if="${!#strings.isEmpty(message)}">
 			<span class="text-center" th:text="${message}"></span>
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
+	
+	<!-- Topic Form -->
+		<div class="accordion my-5" id="newTopicContainer">
+			<div class="accordion-item">
+				<h6 class="accordion-header" id="headingTwo">
+					<button class="accordion-button collapsed bg-danger text-white fw-bold" type="button" data-bs-toggle="collapse"
+						data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="height: 50px">
+						<h6>Deseja compartilhar seu conhecimento ? Contribua agora!</h6>
+					</button>
+				</h6>
+				<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+					data-bs-parent="#newTopicContainer">
+					<div class="accordion-body">
+
+						<div class="card border border-1 border-secondary shadow">
+							<div class="card-body">
+								<h4 class="card-title text-center" 
+									th:utext="'Sentiu falta de algum tópico/assunto interessante em ' + ${#strings.arraySplit(discipline.name, ' ')[0]} + '? <br> Manda pra gente!'">
+								</h4>
+								
+								<div class="alert alert-danger alert-dismissible fade show m-3" role="alert"
+									th:if="${error}">
+									<span class="text-center">Houve um erro ao enviar o conteúdo. Verifique os dados e tente novamente.</span>
+									<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+								</div>
+		
+								<form action="#" method="post" th:action="@{/disciplines/{id}(id=${discipline.id})}"
+									th:object="${topic}">
+									<div class="mb-3 mt-2">
+										<label class="form-label fw-bold" for="name">Nome</label>
+
+										<input type="text" id="name" class="form-control" placeholder="Nome do tópico" th:field="*{name}"
+											maxlength="255" required>
+
+										<div class="invalid-feedback" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Nome
+											inválido</div>
+									</div>
+
+									<div class="mb-3">
+										<label class="form-label fw-bold" for="description">Descrição</label>
+
+										<textarea id="description" class="form-control" placeholder="Uma breve descrição ..."
+											th:field="*{description}" rows="3" maxlength="1000" required></textarea>
+
+										<span class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Descrição
+											inválida</span>
+									</div>
+
+									<div class="mb-3">
+										<label class="form-label fw-bold" for="htmlContent">Conteúdo</label>
+
+										<div id="editor-container" th:utext="${topic.htmlContent}"></div>
+
+										<input type="hidden" th:field="*{htmlContent}" aria-describedby="htmlContentFeedback">
+
+										<div id="htmlContentFeedback" class="invalid-feedback" 
+											th:if="${#fields.hasErrors('htmlContent')}" th:errors="*{htmlContent}">
+											Conteúdo inválido
+										</div>
+									</div>
+
+									<div class="mb-3">
+										<label class="fw-bold">Você acha que esse novo conteúdo deveria ser adicionar ao conjunto de
+											conteúdos "obrigatórios" para a conclusão da Disciplina?</label>
+
+										<div class="form-check">
+											<input class="form-check-input" type="radio" name="required" id="flexRadioDefault1" 
+												value="true" th:field="*{required}">
+											<label class="form-check-label" for="flexRadioDefault1"> Sim, é um dos principais tópicos
+												da disciplina. </label>
+										</div>
+										<div class="form-check">
+											<input class="form-check-input" type="radio" name="required" id="flexRadioDefault2" 
+												value="false" th:field="*{required}">
+											<label class="form-check-label" for="flexRadioDefault2"> Não, é apenas um conteúdo extra.</label>
+										</div>
+									</div>
+
+									<div class="d-grid gap-2 col-6 mx-auto">
+										<button type="submit" class="btn btn-warning btn-lg form-control mt-5 fw-bold">
+											Enviar <i class="fa fa-cloud-upload"></i>
+										</button>
+									</div>
+								</form>
+
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
 
 		<div class="card shadow">
 			<div class="card-header">
 				<ul class="nav nav-tabs fw-bolder">
 					<li class="nav-item">
-						<a class="nav-link text-danger" th:classappend="${page} == 'topics'? 'active'" href="#"
+						<a class="nav-link text-dark" th:classappend="${page} == 'topics'? 'active'" href="#"
 							th:href="@{/disciplines/{id}(id=${discipline.id}, page='topics')}">Tópicos</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-danger" th:classappend="${page} == 'tests'? 'active'" href="#"
+						<a class="nav-link text-dark" th:classappend="${page} == 'tests'? 'active'" href="#"
 							th:href="@{/disciplines/{id}(id=${discipline.id}, page='tests')}">Simulados</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-danger" th:classappend="${page} == 'forum'? 'active'" href="#"
+						<a class="nav-link text-dark" th:classappend="${page} == 'forum'? 'active'" href="#"
 							th:href="@{/disciplines/{id}(id=${discipline.id}, page='forum')}">Fórum</a>
 					</li>
 				</ul>
 			</div>
-			<div class="card-body bg-danger">
+			<div class="card-body ">
 
 				<!-- Topics -->
 				<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'topics')}">
-					<a href="#" class="list-group-item list-group-item-action shadow mb-2 rounded border border-5 p-3"
-						th:each="topic : ${topics}" th:href="@{/topic/{id}(id=${topic.id})}"
-						th:classappend="${topic.user.finished} ? 'border-success'">
+					<div class="list-group-item list-card-item mb-3 border-1"
+						th:each="topic : ${topics}" th:onclick=	"'showTopic(\'' + ${topic.id} + '\');'"						
+						th:classappend="${topic.user.finished} ? 'border-success' : 'border-secondary'"
+						>
 						<div class="d-flex w-100 justify-content-between">
 							<h5 class="mb-1 fw-bolder" th:text="${topic.name}"
-								th:classappend="${topic.user.finished} ? 'text-success'">Topic Name</h5>
+								>Topic Name</h5>
 
-							<i class="fa fa-check-circle fa-2x" aria-hidden="true"
-								th:classappend="${topic.user.finished} ? 'green'"></i>
+							<i class="fa fa-check-circle fa-2x green" aria-hidden="true"
+								th:classappend="${!topic.user.finished} ? 'd-none'"></i>
 						</div>
 
 						<p class="mb-1" th:text="${topic.description}">Some placeholder content in a paragraph.</p>
@@ -95,13 +202,13 @@
 						<div class="d-flex justify-content-end align-items-center">
 							<i class="fa fa-thumbs-o-up fa-lg text-primary me-1"></i> <small class="fw-bold" th:text=${topic.likes}>10</small>
 						</div>
-					</a>
+					</div>
 				</div>
 
 				<!-- Tests -->
 				<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'tests')}">
 
-					<a href="#" class="list-group-item list-group-item-action shadow-lg mb-2">
+					<a href="#" class="list-group-item list-group-item-action shadow mb-2">
 						<div class="d-flex w-100 justify-content-between">
 							<h5 class="mb-1">Simulado - P1</h5>
 							<small class="text-muted">3 days ago</small>
@@ -176,98 +283,6 @@
 			</div>
 		</div>
 		
-		<!-- Topic Form -->
-		<div class="accordion mt-5" id="newTopicContainer">
-			<div class="accordion-item">
-				<h2 class="accordion-header" id="headingTwo">
-					<button class="accordion-button collapsed bg-warning fw-bold" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-						<h4>Contribuindo</h4>
-					</button>
-				</h2>
-				<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-					data-bs-parent="#newTopicContainer">
-					<div class="accordion-body">
-
-						<div class="card border border-1 border-secondary shadow">
-							<div class="card-body">
-								<h4 class="card-title text-center" 
-									th:utext="'Sentiu falta de algum tópico/assunto interessante em ' + ${#strings.arraySplit(discipline.name, ' ')[0]} + '?? <br> Manda pra gente!'">
-								</h4>
-								
-								<div class="alert alert-danger alert-dismissible fade show m-3" role="alert"
-									th:if="${error}">
-									<span class="text-center">Houve um erro ao enviar o conteúdo. Verifique os dados e tente novamente.</span>
-									<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-								</div>
-		
-								<form action="#" method="post" th:action="@{/disciplines/{id}/topics(id=${discipline.id})}"
-									th:object="${topic}">
-									<div class="mb-3 mt-2">
-										<label class="form-label fw-bold" for="name">Nome</label>
-
-										<input type="text" id="name" class="form-control" placeholder="Nome do tópico" th:field="*{name}"
-											maxlength="255" required>
-
-										<div class="invalid-feedback" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Nome
-											inválido</div>
-									</div>
-
-									<div class="mb-3">
-										<label class="form-label fw-bold" for="description">Descrição</label>
-
-										<textarea id="description" class="form-control" placeholder="Uma breve descrição ..."
-											th:field="*{description}" rows="3" maxlength="1000" required></textarea>
-
-										<span class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Descrição
-											inválida</span>
-									</div>
-
-									<div class="mb-3">
-										<label class="form-label fw-bold" for="htmlContent">Conteúdo</label>
-
-										<div id="editor-container" th:utext="${topic.htmlContent}"></div>
-
-										<input type="hidden" th:field="*{htmlContent}" aria-describedby="htmlContentFeedback">
-
-										<div id="htmlContentFeedback" class="invalid-feedback" 
-											th:if="${#fields.hasErrors('htmlContent')}" th:errors="*{htmlContent}">
-											Conteúdo inválido
-										</div>
-									</div>
-
-									<div class="mb-3">
-										<label class="fw-bold">Você acha que esse novo conteúdo deveria ser adicionar ao conjunto de
-											conteúdos "obrigatórios" para a conclusão da Disciplina?</label>
-
-										<div class="form-check">
-											<input class="form-check-input" type="radio" name="required" id="flexRadioDefault1" 
-												value="true" th:field="*{required}">
-											<label class="form-check-label" for="flexRadioDefault1"> Sim, é um dos principais tópicos
-												da disciplina. </label>
-										</div>
-										<div class="form-check">
-											<input class="form-check-input" type="radio" name="required" id="flexRadioDefault2" 
-												value="false" th:field="*{required}">
-											<label class="form-check-label" for="flexRadioDefault2"> Não, é apenas um conteúdo extra.</label>
-										</div>
-									</div>
-
-									<div class="d-grid gap-2 col-6 mx-auto">
-										<button type="submit" class="btn btn-warning btn-lg form-control mt-5 fw-bold">
-											Enviar <i class="fa fa-cloud-upload"></i>
-										</button>
-									</div>
-								</form>
-
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-
 	</div>
 
 	<script type="text/javascript" th:src="@{/js/timeago/timeago.js}"></script>
@@ -276,7 +291,8 @@
 	<script type="text/javascript" th:inline="javascript">
 		$("time.timeago").timeago();
 
-		$('#like').click(function() {
+		$('#likeButton').click(function() {
+			
 			$.post(location.href.split('?')[0] + '/like');
 
 			let button = $(this);
@@ -285,13 +301,11 @@
 
 			$(button).data('liked', liked);
 
-			$('#likeButtonText').text(liked ? 'Descurtir' : 'Curtir');
-
 			let totalLikes = parseInt($('#totalLikes').text());
+			
 			$('#totalLikes').text(liked ? totalLikes + 1 : totalLikes - 1);
-
-			button.removeClass(liked ? "btn-secondary" : 'btn-danger')
-			button.addClass(liked ? "btn-danger" : 'btn-secondary');
+			$('#totalLikes').removeClass(liked ? 'bg-dark' : 'bg-white');
+			$('#totalLikes').addClass(liked ? 'bg-white' : 'bg-dark');
 		});
 
 		hljs.configure({
@@ -343,6 +357,11 @@
 		if (/*[[${error}]]*/false) {
 			$('button[class*="accordion-button"]').click();
 			setTimeout(() => $('#contribute').click(), 300);
+		}
+		
+		function showTopic(topicId) {
+			location.href = '/topic/' + topicId;
+			
 		}
 	</script>
 </body>
