--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -30,18 +30,15 @@
 </head>
 <body>
 	<div class="row">
-		<div class="container bg-dark text-white">
-			<div class="card-body px-5 ms-5 me-5">
+		<div class="p-3 bg-dark text-white">
+			<div class="card-body">
 				<h2 class="card-title text-center fw-bolder" th:text="${topic.name}">Topic Name</h2>
-				<p th:text="${topic.description}"></p>
+				
+				<div class="col-10 offset-1 mb-3">
+					<p th:text="${topic.description}"></p>
+				</div>
 
 				<div class="d-flex justify-content-end">
-					<button id="finishButton" class="btn btn-outline-success me-3"
-						th:classappend="${topic.user.finished} ? 'active'">
-						<i class="fa fa-check"></i>
-						<span th:text="${topic.user.finished} ? 'Concluído' : 'Marcar como concluído'">Marcar como
-							concluído</span>
-					</button>
 
 					<div class="btn-group rounded-start" role="group" aria-label="Like toggle button">
 						<input type="checkbox" class="btn-check" id="likeButton" autocomplete="off"
@@ -54,88 +51,25 @@
 						class="fw-bolder text-primary border border-1 border-start-0 border-primary p-2 rounded-end"
 						th:text="${topic.likes}"></span>
 				</div>
-				<a id="contribute" href="#uploadQuestion" class="btn btn-warning">
-					Contribuir com uma Questão <i class="fa fa-upload"></i>
-				</a>
 			</div>
 		</div>
 	</div>
 
-	<div class="container mt-5">
-		<div class="alert alert-success alert-dismissible fade show" role="alert"
+	<div class="container">
+		<div class="alert alert-success alert-dismissible fade show my-5" role="alert"
 			th:if="${!#strings.isEmpty(successMessage)}">
 			<span th:text=${successMessage}></span>
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
-
-		<h3 class="mt-2">Conteúdo</h3>
-		<div id="contentCard" class="card mt-3 shadow">
-			<div class="card-body" id="contentEditor" th:utext="${topic.htmlContent}"></div>
-		</div>
-
-		<!-- Quiz -->
-		<div id="quiz-container" class="card mt-5 bg-danger bg-initial-quiz">
-			<div class="card-body">
-				<h4 class="card-title text-light" th:text="'Quiz - ' + ${topic.name}">Quiz</h4>
-
-				<div id="quizResult" class="p-3 text-center text-danger bg-white rounded" style="display: none;">
-					<span class="h4">Resultado do Quiz</span>
-					<br>
-				</div>
-
-				<div id="questionContainer" class="p-2 bg-white rounded" style="display: none;">
-					<span id="questionIndex" class="fw-bold">- Question 1 de 3</span>
-					<hr>
-
-					<h5 id="question">Os sistemas de informacao estao evoluindo de acordo com as tendencias de mercado,
-						eles proporcionam ganhos imensuraveis para as organizacoes no que diz respeito a ganho de espaco
-						organizacao dos arquivos e informacoes e com isso a liberdade de acesso, representada pela possibilidade
-						de trabalhar com os dados oferecidos pelo sistema da melhor forma possivel. Assim sendo, podemos
-						concluir que:</h5>
-					<br>
-
-					<!-- Answers -->
-					<div class="alternative form-check mb-3">
-						<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio1">
-
-						<label class="form-check-label" for="alternativeRadio1">Alternativa 1</label>
-					</div>
-
-					<div class="alternative form-check mb-3">
-						<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio2">
-						<label class="form-check-label" for="alternativeRadio2"> Alternativa 2</label>
-					</div>
-				</div>
-
-				<div class="row mt-3">
-					<div class="col">
-						<button id="finishQuiz" type="button" class="btn btn-secondary btn-lg form-control"
-							style="display: none;">Finalizar</button>
-					</div>
-
-					<div class="col">
-						<button id="answerQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
-							style="display: none;">Responder</button>
-					</div>
-
-					<div class="col">
-						<button id="nextQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
-							style="display: none;" onclick="nextQuestion()">Próxima Pergunta</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<button id="startQuiz" class="btn btn-outline-danger btn-lg form-control shadow">Iniciar Quiz</button>
-
-		<!-- Queston form -->
-		<div class="accordion mt-5" id="uploadQuestion">
+		
+		<div class="accordion my-5" id="uploadQuestion">
 			<div class="accordion-item">
-				<h2 class="accordion-header" id="headingTwo">
-					<button class="accordion-button collapsed bg-warning fw-bold" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-						<h4>Contribuindo</h4>
+				<h6 class="accordion-header" id="headingTwo">
+					<button class="accordion-button collapsed bg-danger text-white fw-bold" type="button" data-bs-toggle="collapse"
+						data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="height: 50px">
+						<h6>Deseja compartilhar seu conhecimento ? Contribua agora!</h6>
 					</button>
-				</h2>
+				</h6>
 				<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
 					data-bs-parent="#uploadQuestion">
 					<div class="accordion-body">
@@ -210,6 +144,80 @@
 				</div>
 			</div>
 		</div>
+		
+
+		<h3>Conteúdo</h3>
+		<div id="contentCard" class="card my-3 shadow">
+			<div class="card-body" id="contentEditor" th:utext="${topic.htmlContent}"></div>
+			
+			
+			<div class="d-flex justify-content-end p-3">
+				<button id="finishButton" class="btn btn-outline-success"
+					th:classappend="${topic.user.finished} ? 'active'">
+					<i class="fa fa-check"></i>
+					<span th:text="${topic.user.finished} ? 'Concluído' : 'Marcar como concluído'">Marcar como
+						concluído</span>
+				</button>
+			</div>
+			
+			
+		</div>
+		
+		
+
+		<!-- Quiz -->
+		<div id="quiz-container" class="card mt-5 bg-danger bg-initial-quiz">
+			<div class="card-body">
+				<h4 class="card-title text-light" th:text="'Quiz - ' + ${topic.name}">Quiz</h4>
+
+				<div id="quizResult" class="p-3 text-center text-danger bg-white rounded" style="display: none;">
+					<span class="h4">Resultado do Quiz</span>
+					<br>
+				</div>
+
+				<div id="questionContainer" class="p-2 bg-white rounded" style="display: none;">
+					<span id="questionIndex" class="fw-bold">- Question 1 de 3</span>
+					<hr>
+
+					<h5 id="question">Os sistemas de informacao estao evoluindo de acordo com as tendencias de mercado,
+						eles proporcionam ganhos imensuraveis para as organizacoes no que diz respeito a ganho de espaco
+						organizacao dos arquivos e informacoes e com isso a liberdade de acesso, representada pela possibilidade
+						de trabalhar com os dados oferecidos pelo sistema da melhor forma possivel. Assim sendo, podemos
+						concluir que:</h5>
+					<br>
+
+					<!-- Answers -->
+					<div class="alternative form-check mb-3">
+						<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio1">
+
+						<label class="form-check-label" for="alternativeRadio1">Alternativa 1</label>
+					</div>
+
+					<div class="alternative form-check mb-3">
+						<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio2">
+						<label class="form-check-label" for="alternativeRadio2"> Alternativa 2</label>
+					</div>
+				</div>
+
+				<div class="row mt-3">
+					<div class="col">
+						<button id="finishQuiz" type="button" class="btn btn-secondary btn-lg form-control"
+							style="display: none;">Finalizar</button>
+					</div>
+
+					<div class="col">
+						<button id="answerQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
+							style="display: none;">Responder</button>
+					</div>
+
+					<div class="col">
+						<button id="nextQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
+							style="display: none;" onclick="nextQuestion()">Próxima Pergunta</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<button id="startQuiz" class="btn btn-outline-danger btn-lg form-control shadow">Iniciar Quiz</button>
 
 	</div>
 
